gtk/sass/3.18/_3rd-party.scss
/* ... */
// raven styling
.raven {
  padding: 0;
  border: none;
  color: $secondary_fg_color;
  background-color: $secondary_dark_color;

  // mixin with drop-shadows to avoid the raven edge shine-through
  &:dir(ltr) {
    box-shadow: if($variant == 'light',
                               -1px 0 1px rgba(0, 0, 0, 0.12),
                               -1px 0 1px rgba(0, 0, 0, 0.22));
  }
  &:dir(rtl) {
    box-shadow: if($variant == 'light',
                               1px 0 1px rgba(0, 0, 0, 0.12),
                               1px 0 1px rgba(0, 0, 0, 0.22));
  }

  .raven-header {
    border: none;
    color: $tertiary_fg_color;
    background-color: transparent;
    font-weight: 700;

    &.top { // always use dark variant
      background-color: $inverted_dark_color;
      color: $inverted_fg_color;
      box-shadow: $z-depth-2;

      .button.image-button,
      .button.text-button {
        color: $inverted_secondary_fg_color;
        &:hover,
        &:active,
        &:checked { color: $inverted_fg_color; }
        &:insensitive { color: $insensitive_inverted_fg_color; }
      }
    }

    // last-child is constructed without header-label
    &:not(.top):not(.bottom):not(:last-child) {
      > .label,
      > GtkBox > .label,
      > GtkBox > GtkImage { color: $tertiary_fg_color; }
    }
  }

  .raven-background {
    border-width: 1px 0 0;
    border-style: solid none none;
    border-color: $borders_color;
    background-color: transparent;
    box-shadow: if($variant == 'light', $inline-shadow-light,
                                        $inline-shadow-dark);
  }

  .powerstrip {
    border-top: 1px solid $borders_color;
    background-color: if($variant == 'light', $dark_color,
                      mix($dark_color, $secondary_dark_color, 50%));
    box-shadow: if($variant == 'light', $inline-shadow-light,
                                        $inline-shadow-dark);

    .button {
      padding: 1em;
      color: $secondary_accent_color;
      &:hover,
      &:active,
      &:checked { color: $accent_color; }
      &:insensitive { color: gtkopacity($accent_color, 0.4); }
    }
  }

  .option-subtitle {
    color: $insensitive_secondary_fg_color;
    font-size: 90%;
  }

  GtkScrolledWindow { background: transparent; }

  .list,
  .list-row,
  .list-row.activatable {
    background-color: transparent;
    &:not(.list):hover { color: $fg_color; }
    &:not(.list):selected {
      color: $selected_bg_color;
      &:hover { background-color: gtkopacity($selected_bg_color, 0.1); }
    }

    .separator { color: gtkopacity($insensitive_fg_color, 0.55); }
  }

  // use flat-style
  .button.image-button {
    @include button(flat-normal);
    &:hover { @include button(flat-hover); }
    &:active { @include button(flat-active); }
    &:insensitive { @include button(flat-insensitive); }
    &:checked { @include button(flat-checked); }
    &:checked:insensitive { @include button(flat-checked-insensitive); }
  }

  .raven-header {
    > .button.text-button { // 'exit' button
      @extend .button.suggested-action;
      padding: 0.85em 1.2em 0.95em;
      color: $secondary_selected_fg_color;
      &:hover { color: $selected_fg_color; }
      &:active {
        color: $selected_fg_color;
        background-color: $selected_bg_color;
      }
    }

    .expander-button { // expander arrow buttons
      padding: 1.0em;
      border-radius: 100px;
      outline-radius: 100px;
      color: $tertiary_fg_color;
      &:hover,
      &:active { color: $fg_color; }
    }
  }

  BudgieAppearanceSettings {
    // override built-in vertical spacing
    GtkGrid > .label:first-child,
    GtkGrid > .label:nth-child(2) { padding: 8px 0; }
  }

  BudgieBackgroundSettings {
    // override built-in vertical spacing
    GtkGrid > .label:first-child { padding: 8px 0; }
  }

  GtkCalendar {
    border: none;
    background-color: transparent;
  }

  .undershoot { // remove undershoot
    &.top,
    &.bottom,
    &.left,
    &.right { background-image: none; }
  }
}

// MPRIS applet
.raven-mpris {
  border: none;
  color: $fg_color;
  background-color: gtkopacity($dark_color, 0.9);

  .button.image-button { padding: 0.6em; }
}

// notifications
.budgie-notification-window {
  border-radius: 2px;
  background-color: transparent;

  // draw actual backgrounds
  .drop-shadow { background-color: gtkopacity($inverted_dark_color, 0.9); }
}

.budgie-notification {
  // always use dark-variant
  color: $inverted_fg_color;
  background-color: transparent;

  .notification-title {
    color: $inverted_secondary_fg_color;
    font-size: 110%;
    font-weight: 500;
  }

  .notification-body {
    color: $inverted_fg_color;
    font-size: 90%;
    font-weight: 400;
  }

  .button { // OSD-style buttons
    color: $secondary_accent_color;
    &:hover,
    &:active,
    &:checked { color: $accent_color; }
    &:insensitive { color: gtkopacity($accent_color, 0.4); }
  }
}
/* ... */

